# utter_public

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
desktop/: .env.example  .env.example-filled  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio_setup.rs  cmds.rs  env.rs  errors.rs  groq.rs  lib.rs  main.rs  mongo.rs  permissions.rs  state.rs
desktop/src/components/: AudioSourceSelector.tsx  Kbd.tsx  LevelMeter.tsx  Logo.tsx  RecentList.tsx  RecordingPill.tsx  Titlebar.tsx
desktop/src/lib/: api.ts
docs/: setup.md
docs/design/: preview.html
shared/: package.json
shared/src/: index.test.ts  index.ts
web/: .env.example  .env.local.example-filled  middleware.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: Button.tsx  ChatPanel.tsx  Citation.tsx  Logo.tsx  MonoTime.tsx  RecordingsTable.tsx  SectionLabel.tsx  ShareControl.tsx  Sidebar.tsx  Tag.tsx  TranscriptList.tsx  VideoPlayer.tsx
web/e2e/: happy.spec.ts
web/lib/: auth.ts  claude.ts  db.ts  format.ts  r2.ts  recordings.ts  transcribe.ts
web/scripts/: seed.ts
web/test-results/: .last-run.json
(+34 files in other folders)
