[package]
name = "utter"
version = "0.1.0"
description = "Utter desktop recorder"
authors = ["you"]
edition = "2021"

[lib]
name = "utter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
mongodb = { version = "3.1", features = ["rustls-tls", "bson-2", "compat-3-3-0"] }
bson = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
anyhow = "1"
thiserror = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
constant_time_eq = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
aws-sdk-s3 = { version = "1.62", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
